SERVER-17119 relax no-dups invariant in AND_HASH stage to accommodate WT

Since WT does not issue invalidations, docs will not be removed from the hash table when they
are updated.

(cherry picked from commit 36240ff99233a3f454bbd914fc691f5598283f10)